all of the recipe part [pics + prep time] is now inside a <main> semantic tag. The logic behind it, is maybe making the CSS design easier, by using a {main} selector.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<!--logo placeholder-->
+<!--SVG logo placeholder-->
 
 <header>
 	<h2 class="mylogo">Nutriplay recipes</h2>
@@ -45,7 +45,8 @@
     <br>
 
 <!-- Single recipes: With pictures and prep time -->
-
+<main>
+  
 <!--MARAK KUBBA recipe-->
 <a href="https://www.nutriplay.io/">Kubba soup</a> 
 <figure> <img src="https://medias.hashulchan.co.il/www/uploads/2020/08/shutterstock_1354253429-600x600-1597064024.jpg" alt="yellow kubba soup" width="200" height="200"> </figure> 
@@ -58,14 +59,15 @@
 
 <!--Beat KUBBA Recipe-->
 <a href="https://www.nutriplay.io/">Kubba soup with beat</a> 
-<figure>  <img src="https://medias.hashulchan.co.il/www/uploads/2018/11/AF2P7803-600x600-1545305974.jpg" alt="beat kubba soup" width="200" height="200"> </figure> 
+<figure> <img src="https://medias.hashulchan.co.il/www/uploads/2018/11/AF2P7803-600x600-1545305974.jpg" alt="beat kubba soup" width="200" height="200"> </figure> 
 <p>Prep time: 75min</p>
 
   <!--SARMA Recipe-->
-<a href="https://www.nutriplay.io/">Sarma</a>
-  
+<a href="https://www.nutriplay.io/">Sarma</a>  
 <figure> <img src="https://medias.hashulchan.co.il/www/uploads/2018/10/DSF9281-am-600x600.jpg" alt="sarma from grape leaves and cabbage" width="200" height="200"> </figure>
 <p>Prep time: 2hrs</p>
+
+</main>
 
 
 
