Recipe box changed to inline block with margins

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
   
 <!--Vertical SIDE BAR-->
-<aside>
+<aside class="side-bar">
 <ul>
     <li><a href="https://www.nutriplay.io/">Low calorie recipes</a></li>
     <li><a href="https://www.nutriplay.io/">Vegan recipes</a></li>
