New horizontal navbar CSS

--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
 <body>
 
 <!--SVG logo placeholder-->
-
 <header>
 	<h2 class="mylogo">Nutriplay recipes</h2>
   <!--search bar, not functional - just a placeholder-->
     <input type="text" placeholder="Search..." name="search">
 </header>  
-  <br>
+ <br>
 
 <!--Horizontal NAVigation BAR-->
 <nav>
-    <a href="https://www.nutriplay.io/">Home</a>
-    <a href="https://www.nutriplay.io/">Recipes</a>
-    <a href="https://www.nutriplay.io/">Contact us</a>
-    <a href="https://www.nutriplay.io/">Add a recipe</a>
-    <a href="https://www.nutriplay.io/">Tags</a>
+<ul>
+    <li class="hor-navbar"><a href="https://www.nutriplay.io/">Home</a></li>
+    <li class="hor-navbar"><a href="https://www.nutriplay.io/">Recipes</a></li>
+    <li class="hor-navbar"><a href="https://www.nutriplay.io/">Contact us</a></li>
+    <li class="hor-navbar"><a href="https://www.nutriplay.io/">Add a recipe</a></li>
+    <li class="hor-navbar"><a href="https://www.nutriplay.io/">Tags</a></li>
+  </ul>
 </nav>
+<br><br>
   
   
 <!--Vertical SIDE BAR-->
