nav bar's CSS and html is shorter and more undersandable for code reader now. I improved my selector choices and used less class="...". -in addition, now the whole block in the nav bar is a link, not just the word itself.

--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
 <!--Horizontal NAVigation BAR-->
 <nav>
 <ul>
-    <li class="hor-navbar"><a href="https://www.nutriplay.io/">Home</a></li>
-    <li class="hor-navbar"><a href="https://www.nutriplay.io/">Recipes</a></li>
-    <li class="hor-navbar"><a href="https://www.nutriplay.io/">Contact us</a></li>
-    <li class="hor-navbar"><a href="https://www.nutriplay.io/">Add a recipe</a></li>
-    <li class="hor-navbar"><a href="https://www.nutriplay.io/">Tags</a></li>
+    <li><a href="https://www.nutriplay.io/">Home</a></li>
+    <li><a href="https://www.nutriplay.io/">Recipes</a></li>
+    <li><a href="https://www.nutriplay.io/">Contact us</a></li>
+    <li><a href="https://www.nutriplay.io/">Add a recipe</a></li>
+    <li><a href="https://www.nutriplay.io/">Tags</a></li>
   </ul>
 </nav>
-<br><br>
+
+<br><br><br>
   
   
 <!--Vertical SIDE BAR-->
