New side bar design

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
   </ul>
 </nav>
 
+  <!--Get rid of the brX3 once you understand how to place nav bars in the right way-->
+
 <br><br><br>
+
   
   
 <!--Vertical SIDE BAR-->
@@ -79,6 +82,7 @@
 </section>
 
 </main>
+  
 
 <footer><p>Website made by Pudu, the ultimate doggo</p></footer>
 
